--- a/151129/css/style.css
+++ b/151129/css/style.css
@@ -12,8 +12,8 @@ nav {float:left; font-size:0.8em;}
 nav ul {margin-top:5px;}
 nav ul li {float:left; margin-right:20px;}
 nav ul li a {color:#aaa;}
-nav ul li a:hover {color:#111; border-bottom:2px solid #111; padding-bottom:28px; fint-weight:bold;}
-nav ul li.on {border-bottom:2px solid #111; padding-bottom:28px; fint-weight:bold;}
+nav ul li a:hover {color:#111; border-bottom:2px solid #111; padding-bottom:28px; font-weight:bold;}
+nav ul li.on {border-bottom:2px solid #111; padding-bottom:28px; font-weight:bold;}
 nav ul li.on a {color:#111;}
 
 header div {float:right; padding-right:30px;}
@@ -21,7 +21,7 @@ header div form, header section a {float:left; margin-left:10px;}
 header div input {height:25px;}
 header div label {display:none;}
 header div a {border:1px solid #ccc; padding:7px 10px; color:#222; font-size:0.8em; margin-left:10px; line-height:30px; background:#fff;}
-header div button {border:1px solid green; color:green; padding:0px 10px; font-size:0.8em; margin-left:10px; line-height:30px; background:#fff;}
+header div button {border:1px solid green; color:green; padding:0 10px; font-size:0.8em; margin-left:10px; line-height:30px; background:#fff;}
 
 main {padding-top:75px;}
 .main_bg {background: url("http://cdn-images-1.medium.com/max/2000/1*OlgaspZ00W78xQY-HE9Wsg.png") #020733 no-repeat -200px -300px; width:100%; height:360px; text-align:center; padding-top:40px; color:#fff; }
@@ -75,7 +75,7 @@ aside div a {font-size:0.8em; color:#fff; padding:10px 20px; background:green;}
 
 ol {margin-top:0;}
 ol li {width:100%; padding:20px 0; border-bottom:1px solid #ccc;}
-ol li:last-child {border-bottom:0px; padding-bottom:0;}
+ol li:last-child {border-bottom:0; padding-bottom:0;}
 ol li dt a {font-size:0.9em; color:#111;}
 ol li dd a {font-size:0.9em; color:#aaa;}
 
